#210 fix button alignment

--- a/src/components/primary/channels/_rtc.scss
+++ b/src/components/primary/channels/_rtc.scss
@@ -92,7 +92,7 @@
     // Action button - Camera and screen share
     .actionButtons-14eAc_{
         width: 120px;
-        margin-top: 24px;
+        margin-top: 16px;
         justify-content: unset;
     }
     // Video/Screen share
